# flatpage

./: .gitignore  .pre-commit.sh  .rustfmt.toml  .rusty-hook.toml  AGENTS.md  Cargo.toml  README.md  README.tpl
.github/workflows/: ci.yml
src/: error.rs  frontmatter.rs  lib.rs  markdown.rs  page.rs  path.rs  store.rs  test_helpers.rs
src/util/: abs_page_path.rs  mod.rs  normalized_url.rs  page_location.rs  page_segment.rs  page_shape.rs  rel_page_path.rs
