[package]
description = "A simple file system based markdown flat page"
edition = "2021"
license = "MIT"
name = "flatpage"
repository = "https://github.com/imbolc/flatpage"
version = "0.1.0"

[dependencies]
displaydoc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1"
pulldown-cmark = "0.9"
