[package]
description = "A simple file system based markdown flat page"
edition = "2021"
license = "MIT"
name = "flatpage"
repository = "https://github.com/imbolc/flatpage"
version = "0.2.0"

[dependencies]
displaydoc = "0.2"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
